--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -1208,7 +1208,7 @@
     "description": "An actual reason why a page was blocked"
   },
   "docblockedReasonDisreputable": {
-    "message": "De mala reputación",
+    "message": "Mala reputación",
     "description": "An actual reason why a page was blocked"
   },
   "cloudPush": {
