--- a/src/_locales/sq/messages.json
+++ b/src/_locales/sq/messages.json
@@ -1208,7 +1208,7 @@
     "description": "An actual reason why a page was blocked"
   },
   "docblockedReasonDisreputable": {
-    "message": "I pandershëm",
+    "message": "I papërshtatshëm",
     "description": "An actual reason why a page was blocked"
   },
   "cloudPush": {
