--- a/platform/mv3/extension/_locales/nl/messages.json
+++ b/platform/mv3/extension/_locales/nl/messages.json
@@ -68,7 +68,7 @@
     "description": "Header for a ruleset section in 'Filter lists pane'"
   },
   "3pGroupMalware": {
-    "message": "Malwaredomeinen",
+    "message": "Malware protection, security",
     "description": "Header for a ruleset section in 'Filter lists pane'"
   },
   "3pGroupAnnoyances": {
