Import translation work from https://crowdin.com/project/ublock

--- a/platform/mv3/extension/_locales/tr/messages.json
+++ b/platform/mv3/extension/_locales/tr/messages.json
@@ -364,7 +364,7 @@
     "description": "Text for the button to re-enter element-picking mode"
   },
   "pickerPreview": {
-    "message": "Önizle",
+    "message": "Ön İzle",
     "description": "Text for the button to activate preview mode"
   },
   "pickerCreate": {
